# taipy_hello_world

./: README.md  pyproject.toml
crm_taipy/: dbt_project.yml
crm_taipy/models/: bronze_cadastros_tests.yml  bronze_pedidos_tests.yml  silver_cadastros_tests.yml  sources.yml
crm_taipy/models/bronze/: bronze_cadastros.sql  bronze_pedidos.sql
crm_taipy/models/gold/: gold_kpi_cadastros_por_dia.sql  gold_kpi_cancelamento_por_estado_regiao.sql  gold_kpi_faturados_por_dia_estado_regiao.sql  gold_kpi_ltv.sql  gold_kpi_pedidos_por_dia.sql  gold_kpi_rfm.sql  gold_kpi_taxa_conversao_estado_regiao.sql  gold_kpi_ticket_medio_por_dia.sql  gold_kpi_vendas_por_dia.sql
crm_taipy/models/silver/: silver_cadastros.sql  silver_clientes.sql  silver_pedidos.sql
exploratory_analysis/: consolidate_data.py  data_check.py
frontend/: app.py  funcionando_graficos.py  main.py
frontend/dashboard/: dashboard.md  dashboard.py
generate_datasets/: bronze.py  generate_raw.py  load_raw_to_postgres.py
